tests/03-ingress-impl-specific.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-impl-specific
spec:
  ingressClassName: kube-ingress
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /impl-specific
        backend:
          service:
            name: foo-service
            port:
              number: 8080
